deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: production

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backendtaapp
  namespace: production
spec:
  selector:
    matchLabels:
      app: backendtaapp
  strategy:
    type: RollingUpdate
  replicas: 1 # number of pods
  template:
    metadata:
      labels:
        app: backendtaapp
        env: development
    spec:
      containers:
      - name: backendtaapp
        image:  asia.gcr.io/$PROJECT_ID/production/backendtaapp:$SHORT_SHA
        imagePullPolicy: Always
        ports:
          - containerPort: 3000
            protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: backendtaapp
  namespace: production
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  selector:
    app: backendtaapp

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backendtaapp
  namespace: production
  annotations:
    kubernetes.io/ingress.global-static-ip-name: kubernetes-ip
    kubernetes.io/ingress.allow-http: "false"
    networking.gke.io/managed-certificates: backendtaapp
spec:
  rules:
    - host: satutitikempat.xyz
      http:
        paths:
        - path: /*
          pathType: ImplementationSpecific
          backend:
            service:
              name: backendtaapp
              port: 
                number: 3000
